--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,9 @@
 /*  your css code here. If applicable */
+div::before{
+	color: red;
+	font-size: 18px;
+}
+div::after{
+	color: red;
+	font-size: 18px;
+}
