--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 /*  your css code here. If applicable */
 div::before{
+	content: "Before Element";
 	color: red;
 	font-size: 18px;
 }
 div::after{
+	content: "After Element";
 	color: red;
 	font-size: 18px;
 }
